# rac

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DECISIONS.md  README.md  diverse-uk-legislation-sample-002.md  diverse-uk-legislation-sample-003.md  diverse-uk-legislation-sample-004.md  diverse-uk-legislation-sample-005.md  diverse-uk-legislation-sample.md  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml  sync-racs.yml
_build/logs/: myst.build.json
benchmarks/: amt_speed_benchmark.py  ctc_speed_benchmark.py  eitc_speed_benchmark.py  salt_speed_benchmark.py  standard_deduction_speed_benchmark.py  tax_brackets_benchmark.py
docs/: DESIGN.md  DSL.md  PARAMETER_SYNTAX.md  RAC_SPEC.md  _config.yml  amendment-precedence.md  citations.md  deployed-dsl-generality-audit.md  fidelity.md  generality-audit-001.md  generality-audit-002.md  generality-audit-003.md  generality-audit-004.md  generality-audit-005.md  intro.md  jurisdiction-repos.md  prototype-plan.md  reward-function-summary.md  rulespec.md  schema-alignment.md  time-period-semantics.md  uk-income-tax-scope.md
docs/api/: python.md
docs/architecture/: jurisdictions.md  overview.md  statute-organization.md
docs/contributing/: adding-rules.md  development.md
docs/dsl/: RAC_SPEC.md
docs/getting-started/: installation.md  quickstart.md
docs/papers/: ai-rules-encoding.md
examples/: ated_program.yaml  auto_enrolment_cases.yaml  auto_enrolment_program.yaml  child_benefit_rates_program.yaml  child_benefit_responsibility_program.yaml  council_tax_discount_program.yaml  ct_marginal_relief_cases.yaml  ct_marginal_relief_program.yaml  dense_bench.rs  family_allowance_program.yaml  niit_python_syntax.rac  nmw_program.yaml  reform.rac  reward_function_demo.py  reward_quickstart.py  rl_integration_example.py  run_reform.py  scottish_ctr_max_program.yaml  snap_cases.yaml  state_pension_transitional_program.yaml  uk_tax_benefit.rac  universal_credit_cases.yaml  universal_credit_program.yaml  universal_credit_uprating_2026_27.yaml
mcp/: README.md  chart_uc_earnings.py  pyproject.toml  smoke_test.py
mcp/src/axiom_rules_mcp/: __init__.py  catalogue.py  server.py  translate.py
mcp/src/axiom_rules_mcp/programmes/: child_benefit_responsibility.yaml
mcp/src/rac_mcp/: __init__.py  server.py  translate.py
mcp/src/rac_mcp/programmes/: child_benefit_responsibility.yaml  uk_income_tax.yaml  universal_credit.yaml
paper/: _config.yml  abstract.md  appendix-code.md  conclusion.md  index.md  introduction.md  methods.md  myst.yml  preregistration.md  references.bib  related-work.md
programmes/other/family_allowance/: rules.rac  rules.test.yaml  rules.yaml
programmes/other/flat_tax/: rules.rac  rules.test.yaml  rules.yaml
programmes/other/snap/: rules.rac  rules.test.yaml  rules.yaml
programmes/usda/snap/: cases.yaml  run.py
python/: pyproject.toml
python-ext/: Cargo.toml
python-ext/src/: lib.rs
python/axiom_rules/: __init__.py  cli.py  client.py  dense.py  example_cases.py  loader.py  registry.py  source_registry.py
python/examples/: compare_uc_entitledto.py  list_programmes.py  run_ated_cases.py  run_auto_enrolment_cases.py  run_child_benefit_benchmark.py  run_child_benefit_cases.py  run_child_benefit_rates_cases.py  run_council_tax_discount_cases.py  run_ct_marginal_relief_cases.py  run_household_demo.py  run_nmw_cases.py  run_scottish_ctr_max_cases.py  run_section_21_cases.py  run_snap_benchmark.py  run_snap_cases.py  run_snap_overlay_cases.py  run_standard_deduction_cases.py  run_state_pension_cases.py  run_uk_income_tax_benchmark.py  run_uk_income_tax_cases.py  run_universal_credit_benchmark.py  run_universal_credit_cases.py
python/rac_api/: __init__.py  client.py  dense.py  loader.py  models.py  registry.py
python/tests/: test_registry.py  test_source_registry.py
scripts/: autorac_yaml.py  ci_check.py  migrate_keyword.py  migrate_rac.py  migrate_rac_to_rulespec.py  release.sh  validate_all.py
src/: api.rs  bulk.rs  compile.rs  dense.rs  engine.rs  formula.rs  lib.rs  main.rs  model.rs  rac.rs  rac_dsl.rs  rulespec.rs  spec.rs
src/cosilico/: dependency_resolver.py  dsl_parser.py  microsim.py  python_formula_compiler.py  test_runner.py  vectorized_executor.py
src/rac/: __init__.py  agent.py  ast.py  brackets.py  compiler.py  demo.py  dependency_resolver.py  dsl_agent.py  dsl_executor.py  dsl_experiment.py  dsl_parser.py  eitc_full_test.py  executor.py  experiment.py  generator.py  js_generator.py  microsim.py  migrate.py  model.py  module_loader.py  native.py  oracles.py  parser.py  py_generator.py  python_formula_compiler.py  registry.py  scorer.py  test_runner.py  training.py  types.py  validate.py  validate_all.py  vectorized_executor.py
src/rac/codegen/: __init__.py  javascript.py  python.py  rust.py
src/rac/engine/: __init__.py  ast.py  compiler.py  converter.py  executor.py  model.py  native.py  parser.py  schema.py
src/rac/indexing/: __init__.py  index_store.py  resolver.py
src/rac/parameters/: __init__.py  loader.py  override_resolver.py  schema.py
src/rac/rl/: README.md  (+5 more)
tests/: dense.rs  extends.rs  rac_dsl_parser.rs  rac_parser.rs  rulespec.rs  rulespec_programmes.rs  snap.rs  test_agi.py  test_amendments.py  test_amt_e2e.py  test_bracket_functions.py  test_codegen.py  test_converter.py  test_cross_compilation.py  test_cross_package_imports.py  test_ctc_e2e.py  test_dependency_resolver.py  test_dsl_parser.py  test_eitc_e2e.py  test_engine.py  test_js_generator.py  test_metadata.py  test_microsim.py  test_migrate.py  test_numeric_literal_validation.py  test_override_resolver.py  test_parameter_loader.py  test_py_generator.py  test_rac.py  test_rac_format.py  test_reward.py  test_salt_e2e.py  test_standard_deduction_e2e.py  test_tax_brackets_e2e.py  test_temporal.py  test_test_runner.py  test_unified_syntax.py  test_vectorized_executor.py  uc_entitledto_testpack.md
tests/rac_validation/: __init__.py  conftest.py  test_content.py  test_declarations.py  test_formulas.py  test_paths.py  test_references.py  test_schema.py  test_syntax.py  test_units.py
(+80 files in other folders)
