[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rac"
version = "0.2.0"
description = "Rules as Code — parse, compile, and execute encoded law"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Rules Foundation", email = "hello@rules.foundation" }
]
keywords = ["tax", "benefits", "policy", "rules-engine", "compiler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
rac-validate = "rac.validate:main"

[project.urls]
Homepage = "https://rules.foundation"
Documentation = "https://rules.foundation"
Repository = "https://github.com/RulesFoundation/rac"

[tool.hatch.build.targets.wheel]
packages = ["src/rac"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
