[project]
name = "axiom-rules-mcp"
version = "0.1.0"
description = "MCP server exposing the Axiom Rules Engine and pre-encoded UK legislation as tools for Claude"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "pydantic>=2,<3",
    "PyYAML>=6,<7",
    "axiom-rules",
]

[project.scripts]
axiom-rules-mcp = "axiom_rules_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axiom_rules_mcp"]

[tool.uv.sources]
axiom-rules = { path = "../python", editable = true }
