[package]
name = "rac-dense"
version = "0.1.0"
edition = "2024"

[lib]
name = "rac_dense"
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
numpy = "0.27.0"
pyo3 = { version = "0.27.0", features = ["chrono", "extension-module"] }
rac = { path = ".." }
rust_decimal = "1.38.0"
